priority issues
1. If not shippable, Buy Now, Checkout Instantly, Add to cart should not be shown

2.Compare:
   1. Font styling is off
   2. Search api is Bad request
   3. Cant go to PDP from this page

3. “Location text box” is not visible

4. Card details are missing

--- a/components/Cam/ShippingAddress/address.styl
+++ b/components/Cam/ShippingAddress/address.styl
@@ -175,6 +175,7 @@
   .map-input
     width 350px
     padding 10px
+    background white
 
 .order-map
   height 400px
